feat: add network rest api
